# ballast

./: .gitignore  LICENSE  README.md  agent.py  cli.py  core.py  default_policy.json  proxy.py  pyproject.toml
.github/workflows/: ci.yml
packs/: README.md  eu_ai_act_policy.json  hipaa_policy.json  nist_ai_rmf_policy.json
tests/: test_anchor.py  test_controls.py  test_core.py  test_failsafe.py  test_features.py  test_proxy.py  test_report.py  test_sync.py
