[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ballast"
version = "0.1.0"
description = "A lightweight, local-first safety + audit layer for autonomous AI agents. Zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Bouyant AI" }]
keywords = ["ai", "agents", "llm", "safety", "guardrails", "audit", "local", "offline", "ollama"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = []  # zero — pure standard library, on purpose

[project.scripts]
ballast-proxy = "proxy:main"
ballast-verify = "core:_verify_cli"

[tool.setuptools]
py-modules = ["core", "proxy", "agent"]
